[gd_scene load_steps=10 format=3 uid="uid://cr8q8bgpogqxh"]

[ext_resource type="Script" path="res://players/EnemyBase.gd" id="1_yqhxf"]
[ext_resource type="PackedScene" uid="uid://bmn7ph7d8pufr" path="res://ui/healthbar.tscn" id="1_ysu4t"]
[ext_resource type="Texture2D" uid="uid://ch42pfoqn87nf" path="res://assets/sprites/bacteria.png" id="3_uy37r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_802ss"]
radius = 68.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_sme7v"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nllp1"]
size = Vector2(40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wa2i"]
atlas = ExtResource("3_uy37r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gq41"]
atlas = ExtResource("3_uy37r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f5vdt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wa2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gq41")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyBase" type="CharacterBody2D"]
position = Vector2(0, 1)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_yqhxf")

[node name="dectetion_area" type="Area2D" parent="."]
position = Vector2(21, 20)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dectetion_area"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_802ss")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Healthbar" parent="." instance=ExtResource("1_ysu4t")]
position = Vector2(-3, -10)
max_health = 50.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="damage_zone" type="Area2D" parent="."]
position = Vector2(20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_zone"]
shape = SubResource("CircleShape2D_sme7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_nllp1")

[node name="Bacteria" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 20)
sprite_frames = SubResource("SpriteFrames_f5vdt")
autoplay = "default"

[connection signal="area_entered" from="dectetion_area" to="." method="_on_dectetion_area_area_entered"]
[connection signal="area_exited" from="dectetion_area" to="." method="_on_dectetion_area_area_exited"]
[connection signal="body_entered" from="dectetion_area" to="." method="_on_dectetion_area_body_entered"]
[connection signal="body_exited" from="dectetion_area" to="." method="_on_dectetion_area_body_exited"]
[connection signal="health_empty" from="Healthbar" to="." method="_on_healthbar_health_empty"]
[connection signal="body_entered" from="damage_zone" to="." method="_on_damage_zone_body_entered"]
[connection signal="body_exited" from="damage_zone" to="." method="_on_damage_zone_body_exited"]
